--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# Environment variables
+.env
+
 # testing
 /coverage
 
@@ -21,3 +24,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build output
+build/
+dist/
